--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1883,6 +1883,12 @@
     <!-- [CHAR LIMIT=40] Sound & display settings screen, title of dialog for picking font size -->
     <string name="dialog_title_font_size">Font size</string>
 
+    <!-- HDMI settings title -->
+    <string name="hdmi_settings">HDMI</string>
+    <string name="hdmi_resolution">HDMI Resolution</string>
+    <string name="hdmi_screen_zoom">HDMI Screen Zoom</string>
+    <string name="hdmi_screen_downsizing">HDMI Screen Downsizing</string>
+
     <!-- SIM lock settings title -->
     <string name="sim_lock_settings">SIM card lock settings</string>
     <!-- Security & location settings screen, setting option name -->
@@ -2065,7 +2071,6 @@
     <string name="sd_eject_summary" product="nosdcard">Unmount the internal USB storage</string>
     <!-- SD card & phone storage settings item title that will result in the phone unmounting the SD card.  This will be done before the user phyiscally removes the SD card from the phone.  Kind of like the "Safely remove" on some operating systems.   -->
     <string name="sd_eject_summary" product="default">Unmount the SD card so you can safely remove it</string>
-    <!-- SD card & phone storage settings item title for toggling PTP mode on and off.  When PTP mode is on the device will appear on the USB bus as a PTP camera device instead of an MTP music player.   -->
 
     <!-- SD card & phone storage settings item summary that is displayed when no SD card is inserted.  This version of the string can probably never come up on current hardware. [CHAR LIMIT=25] -->
     <string name="sd_insert_summary" product="nosdcard">Insert USB storage for mounting</string>
@@ -2090,6 +2095,16 @@
     <!-- SD card & phone storage settings item title that will result in the phone unmounting the SD card.   [CHAR LIMIT=80] -->
     <string name="sd_format_summary" product="default">Erases all data on the SD card, such as music and photos</string>
     <!-- SD card status when it is mounted as read only. Will be appended to size, starts with an unbreakable space -->
+
+    <!-- psw0523 add for usb storage -->
+    <string name="usb_eject">Unmount USB storage</string>
+    <string name="usb_eject_summary">Unmount the USB storage so you can safely remove it</string>
+    <string name="usb_insert_summary">Insert USB storage for mounting</string>
+    <string name="usb_mount">Mount USB storage</string>
+    <string name="usb_mount_summary"></string>
+    <string name="usb_format">Erase USB storage</string>
+    <string name="usb_format_summary">Erases all data on the internal USB storage, such as music and photos</string>
+    <!-- end psw0523 -->
 
     <!-- Title of dialog asking user to confirm before clearing all caches. [CHAR LIMIT=48] -->
     <string name="memory_clear_cache_title">Clear cached data?</string>
